Change action link of the "I'm Lucky Button"

--- a/01-Project-0-Search/index.html
+++ b/01-Project-0-Search/index.html
@@ -71,7 +71,8 @@
             </div>
             <div class="form-btns">
                 <input class="search-button" type="submit" value="Google Search">
-                <input class="lucky-button" type="submit" value="I’m Feeling Lucky">
+                <input class="lucky-button" type="submit"
+                    formaction="https://artsandculture.google.com/asset/twGyqq52R-lYpA" value="I’m Feeling Lucky">
             </div>
         </form>
     </section>
